	  There are also MinGW makefiles for each of the mods as well. All of the
	  mod makefiles are generated by the content/makefile_builder.sh script;
	  since this script is probably non-portable, the generated output makefiles
	  have been included in the SVN dir for the time being.
	* Makefile.am: Do not link with libmt32emu.la if it is not built.
	* configure.ac: Cleaning up tests for libogg, libvorbis, libvorbisfile,
	  libglade and libgnomeui. Changed AC_ARG_* to use AS_HELP_STRING. Fixed the
	  default case for --enable-long-long-warnings. Static builds in Mac OS X
	  now work by passing the following arguments to ./configure:
	    --enable-static-libraries
	    --with-macosx-static-lib-path=path/to/static/libs

2010-03-18	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* mapedit/npcedit.cc: Fixed another instance of assuming longs are 32-bit.
	* keyactions.cc: Fixed bug with 'try all keys' action.

2010-03-16	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Exult Studio: Eliminated a few warnings in Prompt window. Some buttons are
	  now the appropriate stock buttons. Commented out gtk_selection_owner_set
	  calls, which were preventing drag-drop from working more than once in ES
	  in X.

2010-03-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2966927 pointers.shp can be dragged into Exult Npc, ES menu
	* Makefile.mingw: Fixed segfault during midi playback when throwing
	  exceptions if GCC used SJLJ exception model. Binaries from these compilers
	  will have an additional dependency on MINGWM10.DLL.
	* windrag.cc: shapes/u7drag.h: Make U7_TARGET_NPCID into an unique ID. Fixed
	  erroneous use of U7_TARGET_NPCID_NAME versus U7_TARGET_NPCID.
	* files/utils.h, server/objserial.*: Longs (and pointers) are *not* always
	  32-bit; make ES actually work on 64-bit Linux.
	* server/server.cc, server/Makefile.am, mapedit/contedit.cc: Make show gump
	  button in ES work for non-actor containers again.
